[3.6] bpo-31786: Make functions in the select module blocking when timeout is a small negative value. (GH-4003). (cherry picked from commit 2c15b29aea5d6b9c61aa42d2c24a07ff1edb4b46)